--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,85 +1,2 @@
 
-
-    <div id='logo'>
-        <%= image_tag "gitopoly.png" %>
-    </div>
-
-    <div id='board'>
-        <!-- Top Row -->
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 800</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-
-
-        <!-- 1st middle Row -->
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 800</span>
-        </div>
-        <div class='player-overview player1'>
-            <span class='player'>Player 1</span>
-            <span class='money'>Money: € 500</span>
-        </div>
-        <div class='player-overview player2'>
-            <span class='player'>Player 2</span>
-            <span class='money'>Money: € 500</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-
-        <!-- 2nd middle Row -->
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 800</span>
-        </div>
-        <div class='player-overview player3'>
-            <span class='player'>Player 3</span>
-            <span class='money'>Money: € 500</span>
-        </div>
-        <div class='player-overview player4'>
-            <span class='player'>Player 4</span>
-            <span class='money'>Money: € 500</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-
-        <!-- Bottom Row -->
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 800</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-        <div>
-            <span class='place'>Straat</span>
-            <span class='price'>€ 400</span>
-        </div>
-
-
-
-
-
-    </div>
+<a href="/games/1"><button>Create new game</button></a>
