--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,19 +1,82 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Turn:</strong>
-  <%= @game.turn %>
-</p>
 
-<p>
-  <strong>Winner:</strong>
-  <%= @game.winner %>
-</p>
 
-<p>
-  <strong>Status:</strong>
-  <%= @game.status %>
-</p>
+    <div id='board'>
+        <!-- Top Row -->
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 800</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
 
-<%= link_to 'Edit', edit_game_path(@game) %> |
-<%= link_to 'Back', games_path %>
+
+        <!-- 1st middle Row -->
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 800</span>
+        </div>
+        <div class='player-overview player1'>
+            <span class='player'>Player 1</span>
+            <span class='money'>Money: € 500</span>
+        </div>
+        <div class='player-overview player2'>
+            <span class='player'>Player 2</span>
+            <span class='money'>Money: € 500</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
+
+        <!-- 2nd middle Row -->
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 800</span>
+        </div>
+        <div class='player-overview player3'>
+            <span class='player'>Player 3</span>
+            <span class='money'>Money: € 500</span>
+        </div>
+        <div class='player-overview player4'>
+            <span class='player'>Player 4</span>
+            <span class='money'>Money: € 500</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
+
+        <!-- Bottom Row -->
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 800</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
+        <div>
+            <span class='place'>Straat</span>
+            <span class='price'>€ 400</span>
+        </div>
+
+
+
+
+
+    </div>
