--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+   
+   
+    <div id='logo'>
+        <%= image_tag "gitopoly.png" %>
+    </div>
     <%= yield %>
   </body>
 </html>
