--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,7 @@
 
 
-   
-   
+
+
     <div id='board'>
         <!-- Top Row -->
         <div>
@@ -14,18 +14,18 @@
        </div>
        <div>
            <span class='place'><%= @games.squares[2].name %></span>
-           <span class='price'>€ 400</span>
+           <span class='price'><%= @games.squares[2].dev_time %></span>
        </div>
        <div>
            <span class='place'><%= @games.squares[3].name %></span>
-           <span class='price'>€ 400</span>
+           <span class='price'><%= @games.squares[3].dev_time %></span>
        </div>
 
 
        <!-- 1st middle Row -->
        <div>
            <span class='place'><%= @games.squares[11].name %></span>
-           <span class='price'>€ 800</span>
+           <span class='price'><%= @games.squares[11].dev_time %></span>
        </div>
        <div class='player-overview player1'>
            <span class='player'>Player 1</span>
@@ -37,13 +37,13 @@
        </div>
        <div>
            <span class='place'><%= @games.squares[4].name %></span>
-           <span class='price'>€ 400</span>
+           <span class='price'><%= @games.squares[4].dev_time %></span>
        </div>
 
        <!-- 2nd middle Row -->
        <div>
            <span class='place'><%= @games.squares[10].name %></span>
-           <span class='price'>€ 800</span>
+           <span class='price'><%= @games.squares[10].dev_time %></span>
        </div>
        <div class='player-overview player3'>
            <span class='player'>Player 3</span>
@@ -55,25 +55,25 @@
        </div>
        <div>
            <span class='place'><%= @games.squares[5].name %></span>
-           <span class='price'>€ 400</span>
+           <span class='price'><%= @games.squares[5].dev_time %></span>
        </div>
 
        <!-- Bottom Row -->
        <div>
            <span class='place'><%= @games.squares[9].name %></span>
-           <span class='price'>€ 800</span>
+           <span class='price'><%= @games.squares[9].dev_time %></span>
        </div>
        <div>
            <span class='place'><%= @games.squares[8].name %></span>
-           <span class='price'>€ 400</span>
+           <span class='price'><%= @games.squares[8].dev_time %></span>
        </div>
        <div>
            <span class='place'><%= @games.squares[7].name %></span>
-           <span class='price'>€ 400</span>
+           <span class='price'><%= @games.squares[7].dev_time %></span>
        </div>
        <div>
            <span class='place'><%= @games.squares[5].name %></span>
-           <span class='price'>€ 400</span>
+           <span class='price'><%= @games.squares[5].dev_time %></span>
        </div>
 
 
