--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,70 +10,70 @@
        </div>
        <div>
            <span class='place'><%= @games.squares[1].name %></span>
-           <span class='price'><%= @games.squares[1].dev_time %></span>
+           <span class='price'><%= @games.squares[1].dev_time %> Hours</span>
        </div>
        <div>
            <span class='place'><%= @games.squares[2].name %></span>
-           <span class='price'><%= @games.squares[2].dev_time %></span>
+           <span class='price'><%= @games.squares[2].dev_time %> Hours</span>
        </div>
        <div>
            <span class='place'><%= @games.squares[3].name %></span>
-           <span class='price'><%= @games.squares[3].dev_time %></span>
+           <span class='price'><%= @games.squares[3].dev_time %> Hours</span>
        </div>
 
 
        <!-- 1st middle Row -->
        <div>
            <span class='place'><%= @games.squares[11].name %></span>
-           <span class='price'><%= @games.squares[11].dev_time %></span>
+           <span class='price'><%= @games.squares[11].dev_time %> Hours</span>
        </div>
        <div class='player-overview player1'>
            <span class='player'>Player 1</span>
-           <span class='money'>Money: € 500</span>
+           <span class='money'>Hours: 500</span>
        </div>
        <div class='player-overview player2'>
            <span class='player'>Player 2</span>
-           <span class='money'>Money: € 500</span>
+           <span class='money'>Hours: 500</span>
        </div>
        <div>
            <span class='place'><%= @games.squares[4].name %></span>
-           <span class='price'><%= @games.squares[4].dev_time %></span>
+           <span class='price'><%= @games.squares[4].dev_time %> Hours</span>
        </div>
 
        <!-- 2nd middle Row -->
        <div>
            <span class='place'><%= @games.squares[10].name %></span>
-           <span class='price'><%= @games.squares[10].dev_time %></span>
+           <span class='price'><%= @games.squares[10].dev_time %> Hours</span>
        </div>
        <div class='player-overview player3'>
            <span class='player'>Player 3</span>
-           <span class='money'>Money: € 500</span>
+           <span class='money'>Hours: 500</span>
        </div>
        <div class='player-overview player4'>
            <span class='player'>Player 4</span>
-           <span class='money'>Money: € 500</span>
+           <span class='money'>Hours: 500</span>
        </div>
        <div>
            <span class='place'><%= @games.squares[5].name %></span>
-           <span class='price'><%= @games.squares[5].dev_time %></span>
+           <span class='price'><%= @games.squares[5].dev_time %> Hours</span>
        </div>
 
        <!-- Bottom Row -->
        <div>
            <span class='place'><%= @games.squares[9].name %></span>
-           <span class='price'><%= @games.squares[9].dev_time %></span>
+           <span class='price'><%= @games.squares[9].dev_time %> Hours</span>
        </div>
        <div>
            <span class='place'><%= @games.squares[8].name %></span>
-           <span class='price'><%= @games.squares[8].dev_time %></span>
+           <span class='price'><%= @games.squares[8].dev_time %> Hours</span>
        </div>
        <div>
            <span class='place'><%= @games.squares[7].name %></span>
-           <span class='price'><%= @games.squares[7].dev_time %></span>
+           <span class='price'><%= @games.squares[7].dev_time %> Hours</span>
        </div>
        <div>
            <span class='place'><%= @games.squares[5].name %></span>
-           <span class='price'><%= @games.squares[5].dev_time %></span>
+           <span class='price'><%= @games.squares[5].dev_time %> Hours</span>
        </div>
 
 
