--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-
+<h1><%= @games.players[0].name %></h1>
 
 
 
@@ -28,12 +28,12 @@
            <span class='price'><%= @games.squares[11].dev_time %> Hours</span>
        </div>
        <div class='player-overview player1'>
-           <span class='player'>Player 1</span>
-           <span class='money'>Hours: 500</span>
+           <span class='player'><%= @games.players[0].name %></span>
+           <span class='money'><%= @games.players[0].time %></span>
        </div>
        <div class='player-overview player2'>
-           <span class='player'>Player 2</span>
-           <span class='money'>Hours: 500</span>
+           <span class='player'><%= @games.players[1].name %></span>
+           <span class='money'><%= @games.players[1].time %></span>
        </div>
        <div>
            <span class='place'><%= @games.squares[4].name %></span>
@@ -46,12 +46,12 @@
            <span class='price'><%= @games.squares[10].dev_time %> Hours</span>
        </div>
        <div class='player-overview player3'>
-           <span class='player'>Player 3</span>
-           <span class='money'>Hours: 500</span>
+           <span class='player'><%= @games.players[2].name %></span>
+           <span class='money'><%= @games.players[2].time %></span>
        </div>
        <div class='player-overview player4'>
-           <span class='player'>Player 4</span>
-           <span class='money'>Hours: 500</span>
+           <span class='player'><%= @games.players[3].name %></span>
+           <span class='money'><%= @games.players[3].time %></span>
        </div>
        <div>
            <span class='place'><%= @games.squares[5].name %></span>
